--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <input type="submit" name="" value="login">
         </form>
     </section>
-    <section>
+    <!--<section>
         <h1>signup</h1>
         <form name="signUp" action="/signup" method="post">
             <div>
@@ -59,7 +59,7 @@
 
             <input type="submit" name="" value="signUp">
         </form>
-    </section>
+    </section>-->
 
     <!--<form name="resetPassword" action="/resetPassword" method="post">
         <input type="text" name="email" value="">
